Fixed dark mode styles

--- a/index.css
+++ b/index.css
@@ -36,6 +36,8 @@ html {
 }
 
 body {
+  background-color: var(--bg-clr);
+  color: var(--text-clr);
   font-size: 1rem;
 }
 
